[project]
name = "universityinsighthub"
version = "0.1.0"
description = "University Survey Analytics Tool"
authors = [
    { name="Ashutosh Gupta", email="guptashu562000@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pyldavis>=3.4.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
    "openpyxl>=3.1.2",
    "fpdf>=1.7.2",
    "kaleido"
]

# NOTE: Kaleido requires Google Chrome to be installed on your system.
# Download from https://www.google.com/chrome/ or use $plotly_get_chrome